fixed consumption bug not showing on print and some css

--- a/web-app/src/css/global.css
+++ b/web-app/src/css/global.css
@@ -46,13 +46,13 @@
 body {
 	padding: 0px;
 	margin: 0px;
-	/* width: 100vw; */
 	width: 100%;
 	height: 100vh;
 	font-family: "Montserrat", sans-serif;
 	font-weight: 400;
 	background-color: var(--bg-dark);
 	color: white;
+	overflow-y: auto !important;
 }
 
 /* SCREENSAVER */
@@ -133,7 +133,6 @@ body {
 /* Firefox */
 * {
 	scrollbar-width: auto;
-	/* scrollbar-color: #0067d2 rgba(255, 255, 255, 0.1); */
 	scrollbar-color: #0067d2 var(--bg-scroll);
 }
 
@@ -143,7 +142,6 @@ body {
 }
 
 *::-webkit-scrollbar-track {
-	/* background: rgba(255, 255, 255, 0.1); */
 	background: var(--bg-scroll);
 }
 
